Class.newInstance() bypasses exception checking; prefer getConstructor().newInstance()